--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "better-sqlite3": "^9.4.1",
+    "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.9",
     "eslint": "^8",
     "eslint-config-next": "14.0.3"
   }
